--- a/layout_Loja11/css/shop-homepage.css
+++ b/layout_Loja11/css/shop-homepage.css
@@ -88,3 +88,13 @@ body {
 {
   margin: -225px 0px 0px 0px
 }
+
+.quack
+{
+  margin: 25px -25px 0px 0px
+}
+
+.poc
+{
+  margin: 25px 0px 0px 0px
+}
